--- a/src/components/ContainerAddress/ContainerAddress.scss
+++ b/src/components/ContainerAddress/ContainerAddress.scss
@@ -1,5 +1,7 @@
 .ContainerAddress {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   width: 50%;
+  padding: 0 20px;
 }
