--- a/src/components/Address/Address.scss
+++ b/src/components/Address/Address.scss
@@ -1,10 +1,34 @@
+button {
+  margin-right: 20px;
+  padding: 5px 10px;
+  text-align: center;
+  background-color: #2a2c2d;
+  font-size: 15px;
+  color: #6b6f71;
+  border: none;
+}
+
+button:hover {
+  background-color: #133e49;
+}
+
 .Address {
   display: flex;
-  width: 100%;
+  flex-direction: column;
+  width: 98%;
   height: 100px;
+  padding-left: 20px;
   background-color: #3a3d3e;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+
+  &__text {
+    font-size: 20px;
+    font-weight: 500;
+    color: #6b6f71;
+  }
 }
 
 .Address:hover {
   background-color: #404749;
+  box-shadow: none;
 }
