--- a/src/components/ContainerAddress/ContainerAddress.scss
+++ b/src/components/ContainerAddress/ContainerAddress.scss
@@ -5,3 +5,10 @@
   width: 50%;
   padding: 0 20px;
 }
+
+@media screen and (max-width: 1256px) {
+  .ContainerAddress {
+    align-items: center;
+    width: 100%;
+  }
+}
