--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,10 @@
 .App {
+  box-sizing: border-box;
   display: flex;
+  justify-content: center;
   width: 100%;
   height: 100%;
-  padding: 5px;
+  padding: 14px 8px;
   background-color: #2a2c2d;
 }
 
