--- a/src/components/ContainerAddress/ContainerAddress.scss
+++ b/src/components/ContainerAddress/ContainerAddress.scss
@@ -1,14 +1,15 @@
 .ContainerAddress {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  width: 50%;
-  padding: 0 20px;
+  margin-right: 6px;
+  // justify-content: space-around;
+  // padding: 0 20px;
 }
 
 @media screen and (max-width: 1256px) {
   .ContainerAddress {
     align-items: center;
     width: 100%;
+    margin: 0;
   }
 }
