--- a/src/components/ContainerMap/ContainerMap.scss
+++ b/src/components/ContainerMap/ContainerMap.scss
@@ -2,9 +2,10 @@
   width: 50%;
 
   &__map {
+    width: 100%;
     max-width: 600px;
     height: 500px;
-    margin: 10px
+    // margin: 10px
   }
 }
 
