--- a/src/components/Address/Address.scss
+++ b/src/components/Address/Address.scss
@@ -7,6 +7,7 @@
   padding: 9px 14px;
   background-color: #3a3d3e;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  cursor: pointer;
 
   &__text {
     margin: 0;
@@ -14,10 +15,12 @@
     font-size: 20px;
     font-weight: 500;
     color: #000;
+    overflow-x: hidden;
   }
 
   &__button {
     min-width: 95px;
+    max-width: 120px;
     margin-right: 12px;
     padding: 5px 10px;
     text-align: center;
@@ -26,6 +29,7 @@
     color: #6b6f71;
     border: none;
     border-radius: 3px;
+    overflow-x: hidden;
   }
 
   &__button:hover {
@@ -45,7 +49,7 @@
   }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 768px) {
   
   .Address {
     width: 320px;
@@ -56,6 +60,7 @@
 
     &__button {
       margin-bottom: 5px;
+      max-width: 320px;
     }
   }
 }
